// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recruitment/create-candidate/workable CreateCandidate when specified job does exist performs correctly 1`] = `
Ok {
  "value": Object {
    "id": "d4a9b88",
    "jobId": "FCFA80DF09",
    "rateLimit": Object {
      "bucket": "workable",
      "remainingRequests": 7,
      "remainingRequestsPercentage": 70,
      "resetTimestamp": 1671626648,
      "totalRequests": 10,
    },
  },
}
`;

exports[`recruitment/create-candidate/workable CreateCandidate when specified job does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get job by ID NOT-EXISTING. Check that the job with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"workable\\"
  }
}
AST Path: definitions[0].statements[1].statements[0]
Original Map Location: Line 16, column 5",
}
`;

exports[`recruitment/create-candidate/workable CreateCandidate when specified subdomain does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get subdomain by name invalid-superface. Check that the subdomain with that name exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"workable\\"
  }
}
AST Path: definitions[0].statements[0].statements[0]
Original Map Location: Line 9, column 5",
}
`;
